[gd_scene load_steps=61 format=2]

[ext_resource path="res://Materials/wood.material" type="Material" id=1]
[ext_resource path="res://Entities/ShopStuff/soda.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/ShopStuff/bowl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ShopWorld.gd" type="Script" id=4]
[ext_resource path="res://Audio/cash_register.wav" type="AudioStream" id=5]
[ext_resource path="res://Entities/ShopStuff/gate_simple.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/PlayerModel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/PortalSign.gd" type="Script" id=8]
[ext_resource path="res://Entities/ShopStuff/desk.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/ShopStuff/computerScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Entities/ShopStuff/computerKeyboard.tscn" type="PackedScene" id=11]
[ext_resource path="res://Entities/ShopStuff/computerMouse.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Terminal.gd" type="Script" id=13]
[ext_resource path="res://Scenes/ComputerScreen.gd" type="Script" id=14]
[ext_resource path="res://Entities/ShopStuff/texture/black-hole-png-224.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Sign1.gd" type="Script" id=16]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=2]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.482353, 0.85098, 0.541176, 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 10, 2 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 12, 0.25, 8 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.25, 2, 8 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 12, 6, 0.25 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 12, 6, 0.25 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.25, 2, 8 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 2, 0.25, 8 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="QuadMesh" id=11]
size = Vector2( 0.8, 1 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Fonts/Radical-regular.otf"

[sub_resource type="DynamicFont" id=13]
size = 90
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 12 )

[sub_resource type="CubeMesh" id=14]
size = Vector3( 12, 0.25, 8 )

[sub_resource type="SpatialMaterial" id=15]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.180392, 0.180392, 0.180392, 1 )

[sub_resource type="CubeMesh" id=16]
size = Vector3( 0.01, 6, 8 )

[sub_resource type="CubeMesh" id=17]
size = Vector3( 0.25, 6, 5 )

[sub_resource type="SpatialMaterial" id=18]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.192157, 0.192157, 0.192157, 1 )

[sub_resource type="CubeMesh" id=19]
size = Vector3( 2, 3, 4 )

[sub_resource type="SpatialMaterial" id=20]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.403922, 0.294118, 0, 1 )

[sub_resource type="CylinderMesh" id=21]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="SpatialMaterial" id=22]
vertex_color_use_as_albedo = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=23]
size = Vector3( 0.2, 3, 8 )

[sub_resource type="OpenSimplexNoise" id=24]

[sub_resource type="NoiseTexture" id=25]
seamless = true
as_normalmap = true
bump_strength = 32.0
noise = SubResource( 24 )

[sub_resource type="OpenSimplexNoise" id=26]

[sub_resource type="NoiseTexture" id=27]
noise = SubResource( 26 )

[sub_resource type="SpatialMaterial" id=28]
albedo_color = Color( 0.160784, 0.160784, 0.160784, 1 )
metallic = 1.0
metallic_specular = 1.0
metallic_texture = SubResource( 25 )
normal_enabled = true
normal_scale = 1.0
normal_texture = SubResource( 27 )

[sub_resource type="CubeMesh" id=29]
size = Vector3( 6, 3, 3 )

[sub_resource type="SpatialMaterial" id=30]
albedo_color = Color( 0.345098, 0.345098, 0.345098, 1 )

[sub_resource type="CubeMesh" id=31]
flip_faces = true
size = Vector3( 0.8, 0.8, 6 )

[sub_resource type="SpatialMaterial" id=32]
flags_unshaded = true

[sub_resource type="SpatialMaterial" id=33]
flags_do_not_receive_shadows = true
flags_ensure_correct_normals = true
params_diffuse_mode = 4
albedo_texture = ExtResource( 15 )
uv1_offset = Vector3( 0.25, 0.1, 0 )
uv1_triplanar_sharpness = 0.0371627

[sub_resource type="SphereMesh" id=34]
material = SubResource( 33 )
radius = 0.8
height = 1.6
radial_segments = 12

[sub_resource type="ViewportTexture" id=35]
viewport_path = NodePath("Ground/Building/MeshInstance2/Viewport")

[sub_resource type="SpatialMaterial" id=36]
resource_local_to_scene = true
flags_unshaded = true
params_billboard_keep_scale = true
albedo_texture = SubResource( 35 )

[sub_resource type="QuadMesh" id=37]
material = SubResource( 36 )
size = Vector2( 5, 4 )

[sub_resource type="QuadMesh" id=38]
size = Vector2( 0.38, 0.24 )

[sub_resource type="DynamicFontData" id=39]
font_path = "res://Fonts/Tribe-regular.otf"

[sub_resource type="DynamicFont" id=40]
size = 32
font_data = SubResource( 39 )

[sub_resource type="DynamicFontData" id=41]
font_path = "res://Fonts/Tribe-regular.otf"

[sub_resource type="DynamicFont" id=42]
size = 50
font_data = SubResource( 41 )

[sub_resource type="PanoramaSky" id=43]

[sub_resource type="Environment" id=44]
background_mode = 1
background_sky = SubResource( 43 )
background_color = Color( 1, 1, 1, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 4 )

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Path" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.02, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Building" type="Spatial" parent="Ground"]

[node name="Wall8" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 6, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="Sign" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.5, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Wall" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 3, 4 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )

[node name="Wall2" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 3, -4 )
mesh = SubResource( 7 )
material/0 = ExtResource( 1 )

[node name="Wall3" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 8 )
material/0 = ExtResource( 1 )

[node name="Wall4" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Sign1" type="Spatial" parent="Ground/Building/Wall4"]
transform = Transform( 0.518714, 0, 0.854948, 0, 1, 0, -0.854948, 0, 0.518714, 0.365226, 0.504048, -3.02401 )

[node name="Sign1" type="MeshInstance" parent="Ground/Building/Wall4/Sign1"]
transform = Transform( 1, -2.98023e-08, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, -1.26096, 0.0117846, -0.267651 )
mesh = SubResource( 11 )
material/0 = null
script = ExtResource( 16 )

[node name="Viewport" type="Viewport" parent="Ground/Building/Wall4/Sign1/Sign1"]
size = Vector2( 600, 400 )
render_target_v_flip = true

[node name="ViewportContainer" type="ViewportContainer" parent="Ground/Building/Wall4/Sign1/Sign1/Viewport"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_scale = Vector2( 0.961778, 1.08347 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ground/Building/Wall4/Sign1/Sign1/Viewport/ViewportContainer"]
margin_right = 655.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.054902, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100% 
Free 
Range"
align = 1
valign = 1

[node name="Sign2" type="Spatial" parent="Ground/Building/Wall4"]
transform = Transform( -0.681206, 0, 0.732091, 0, 1, 0, -0.732091, 0, -0.681206, -0.686658, 0.666111, -1.1694 )

[node name="Sign2" type="MeshInstance" parent="Ground/Building/Wall4/Sign2"]
transform = Transform( 0.788773, 0.106739, -0.605346, 0, 0.984808, 0.173648, 0.614684, -0.136969, 0.77679, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = null
script = ExtResource( 16 )

[node name="Viewport" type="Viewport" parent="Ground/Building/Wall4/Sign2/Sign2"]
size = Vector2( 600, 400 )
render_target_v_flip = true

[node name="ViewportContainer" type="ViewportContainer" parent="Ground/Building/Wall4/Sign2/Sign2/Viewport"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_scale = Vector2( 0.961778, 1.08347 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ground/Building/Wall4/Sign2/Sign2/Viewport/ViewportContainer"]
margin_right = 655.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Freshly 
Picked
Ingrediants"
align = 1
valign = 1

[node name="Wall5" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )
mesh = SubResource( 14 )
material/0 = SubResource( 15 )

[node name="Wall6" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9439, 3, 0 )
mesh = SubResource( 16 )
material/0 = ExtResource( 1 )

[node name="Wall7" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.413, 3, 1.5 )
mesh = SubResource( 17 )
material/0 = SubResource( 18 )

[node name="Wall10" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 1, 2 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Items" type="Spatial" parent="Ground/Building"]

[node name="soda" parent="Ground/Building/Items" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.469003, 2.14035, -3.35757 )

[node name="soda2" parent="Ground/Building/Items" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1.25, 0, 0, 0, 1, -0.426988, 2.14035, -2.97503 )

[node name="soda3" parent="Ground/Building/Items" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, -0.469003, 2.14035, -2.68867 )

[node name="bowl" parent="Ground/Building/Items" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -5.81723, 2.45576, 2.379 )

[node name="Pipe" type="MeshInstance" parent="Ground/Building"]
transform = Transform( -1.62921e-07, -1, 0, -1.62921e-07, 2.65431e-14, -1, 1, -1.62921e-07, -1.62921e-07, -6.45524, 3.45264, 2.3987 )
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

[node name="Shutter" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
mesh = SubResource( 23 )
material/0 = SubResource( 28 )

[node name="Computer" type="MeshInstance" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.49158, 1.50579, 2.28785 )
mesh = SubResource( 29 )
material/0 = SubResource( 30 )

[node name="gate_simple" parent="Ground/Building/Computer" instance=ExtResource( 6 )]
transform = Transform( -3.25841e-07, 0, 1, 0, 2, 0, -2, 0, -1.62921e-07, -2.30449, 0.826267, -0.00472736 )

[node name="PortalTunnel" type="MeshInstance" parent="Ground/Building/Computer/gate_simple"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 0.781153, -3.15882 )
mesh = SubResource( 31 )
material/0 = SubResource( 32 )

[node name="Car" parent="Ground/Building/Computer" instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 1.63921, 1.41989, 0 )

[node name="CarCamera" type="Camera" parent="Ground/Building/Computer/Car"]
transform = Transform( 1, 0, -3.12639e-13, 0, 1, 0, 3.12639e-13, 0, 1, 1.43051e-06, 0.98319, 1.09551 )
current = true

[node name="Portal" type="MeshInstance" parent="Ground/Building/Computer"]
transform = Transform( 0.1, 0, 0, 0, -0.173648, -0.984808, 0, 0.984808, -0.173648, -2.58604, 2.0438, 0 )
mesh = SubResource( 34 )
material/0 = null

[node name="PortalTarget" type="Spatial" parent="Ground/Building/Computer"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4, 2.044, 0 )

[node name="PortalSign" type="MeshInstance" parent="Ground/Building"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -9.22027, 3.07613, 3.67867 )
mesh = SubResource( 37 )
skeleton = NodePath("")
material/0 = null
script = ExtResource( 8 )

[node name="Viewport" type="Viewport" parent="Ground/Building/PortalSign"]
size = Vector2( 1100, 800 )
size_override_stretch = true
hdr = false
disable_3d = true
usage = 0
render_direct_to_screen = true
render_target_v_flip = true

[node name="ViewportContainer" type="ViewportContainer" parent="Ground/Building/PortalSign/Viewport"]
margin_right = 800.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
rect_scale = Vector2( 0.961778, 1.08347 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ground/Building/PortalSign/Viewport/ViewportContainer"]
margin_right = 655.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fruitiverse Portal 
Generator 9000!"
align = 1
valign = 1

[node name="Spatial" type="Spatial" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.91743, 0, 0 )

[node name="ComputerScreen" type="MeshInstance" parent="Ground/Building/Spatial"]
transform = Transform( -4.5, 2.43882e-07, -1.73531e-06, 0, 4.45621, 0.626279, 1.75236e-06, 0.626279, -4.45621, 1.20403, 2.49119, 0.358029 )
mesh = SubResource( 38 )
material/0 = null
script = ExtResource( 14 )

[node name="Viewport" type="Viewport" parent="Ground/Building/Spatial/ComputerScreen"]
size = Vector2( 1000, 600 )
usage = 0
render_target_v_flip = true
gui_disable_input = true

[node name="Control" type="Control" parent="Ground/Building/Spatial/ComputerScreen/Viewport"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Ground/Building/Spatial/ComputerScreen/Viewport/Control"]
margin_right = 1020.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terminal" type="TextEdit" parent="Ground/Building/Spatial/ComputerScreen/Viewport/Control/ViewportContainer"]
margin_left = 40.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 40 )
syntax_highlighting = true
show_line_numbers = true
smooth_scrolling = true
wrap_enabled = true
minimap_draw = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 13 )

[node name="RichTextLabel" type="RichTextLabel" parent="Ground/Building/Spatial/ComputerScreen/Viewport/Control/ViewportContainer"]
margin_right = 1020.0
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 42 )
bbcode_enabled = true
bbcode_text = "[center]Fruit[color=#4ab3ff]OS"
text = "FruitOS"
scroll_active = false

[node name="desk" parent="Ground/Building/Spatial" instance=ExtResource( 9 )]
transform = Transform( -4.5, 0, -1.75236e-06, 0, 4.5, 0, 1.75236e-06, 0, -4.5, 2.08891, 0, -0.932589 )

[node name="computerScreen" parent="Ground/Building/Spatial/desk" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19209e-07, 0.383708, -0.236409 )

[node name="computerKeyboard" parent="Ground/Building/Spatial/desk" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0503724, 0.384335, -0.0628414 )

[node name="computerMouse" parent="Ground/Building/Spatial/desk" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.503562, 0.387394, -0.108157 )

[node name="Loading" type="Spatial" parent="Ground/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9962, 3.52571, 2.34738 )

[node name="MenuCamera" type="Camera" parent="."]
transform = Transform( 0.34202, -0.664463, 0.664463, 0, 0.707107, 0.707107, -0.939693, -0.241845, 0.241845, 5.61511, 10.2316, 2.06091 )
fov = 60.0

[node name="ShopCamera" type="Camera" parent="."]
transform = Transform( 0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, 2.66871, 3.20876, 0.759466 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1.62921e-07, 3.25841e-07, 1, 0, -1, 3.25841e-07, 1, 5.30863e-14, 1.62921e-07, 14.1693, 24.9808, -15.9118 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.03212, 4.73592, -0.313798 )
environment = SubResource( 44 )

[node name="CashRegister" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3881, -1.67833 )
stream = ExtResource( 5 )

[node name="PortalCamera" type="Camera" parent="."]
transform = Transform( -0.939692, -0.0593914, 0.336825, 0, 0.984808, 0.173648, -0.342021, 0.163176, -0.925416, -7.57492, 4.41804, -2.74552 )
